<resources>
    <string name="app_name">GigFinder</string>

    <!-- Notifications -->
    <string name="channel_name">Allgemein</string>
    <string name="channel_description">Dies sind die allgemeinen Nachrichten</string>

    <!-- Sign-In -->
    <string name="server_client_id">998701200015-krr5qpgg3go6iol8b2oqv3l4jcttspom.apps.googleusercontent.com</string>

    <!-- SharedPreferences -->
    <string name="shared_prefs">AppPrefs</string>

    <string name="nav_explore">Explore</string>
    <string name="nav_favorites">Favoriten</string>
    <string name="nav_gigs">Gigs</string>
    <string name="nav_events">Events</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profil</string>

    <string name="selectuser_label">Wie wollen sie die App nutzen?</string>
    <string name="selectuser_button_host">Als Location Host</string>
    <string name="selectuser_button_artist">Als Musiker</string>

    <string name="selectuser_title">Registrieren</string>

    <!-- Registrierung Artist  -->
    <string name="registration_artist_title">Registrieren - Musiker</string>
    <string name="registration_artist_picture">Profilbild</string>
    <string name="registration_artist_image_hint">(zum ändern antippen)</string>
    <string name="registration_artist_name">Nutzername (sichtbar für andere)</string>
    <string name="registration_artist_name_hint">Name</string>
    <string name="registration_artist_description">Beschreibung</string>
    <string name="registration_artist_description_hint">Beschreibung des Musikers</string>
    <string name="registration_artist_color">Hintergrundfarbe wählen</string>
    <string name="registration_artist_color_hint">Platzhalter für ColorPicker (hexcode)</string>
    <string name="registration_artist_genre">Genre</string>
    <string name="registration_artist_social_media">Social Media (Benutzername)</string>

    <!-- Registrierung Host  -->
    <string name="registration_host_title">Registrieren - Location Host</string>
    <string name="registration_host_picture">Profilbild</string>
    <string name="registration_host_image_hint">(zum ändern antippen)</string>
    <string name="registration_host_name">Nutzername (sichtbar für andere)</string>
    <string name="registration_host_name_hint">Name</string>
    <string name="registration_host_description">Beschreibung</string>
    <string name="registration_host_description_hint">Beschreibung von Location und Host</string>
    <string name="registration_host_location_hint">Location wählen</string>
    <string name="registration_host_color">Hintergrundfarbe wählen</string>
    <string name="registration_host_color_hint">Platzhalter für ColorPicker (hexcode)</string>
    <string name="registration_host_genre">Genre</string>

    <string name="registration_button">Registrieren</string>

    <!-- Social Media Hints -->
    <string name="hint_soundcloud">Soundcloud Profilname</string>
    <string name="hint_facebook">Facebook Profilname</string>
    <string name="hint_twitter">Twitter Profilname</string>
    <string name="hint_youtube">YouTube Kanalname</string>
    <string name="hint_instagram">Instagram Accountname</string>
    <string name="hint_spotify">Spotify Profilname</string>
    <string name="hint_web">Eigene Website</string>


    <!-- Genres  -->
    <string name="artist_genre_choose">Bitte auswählen…</string>
    <string name="artist_genre_techno">Techno</string>
    <string name="artist_genre_schlager">Schlager</string>
    <string name="artist_genre_rock">Rock</string>
    <string name="artist_genre_other">Anderes</string>

    <string name="pick_photo_intent">Bild auswählen</string>

    <!-- Profil  -->
    <string name="profile_description">Beschreibung:</string>
    <string name="profile_review_title">Bewertung</string>
    <string name="profile_review_stars_title">Rating</string>
    <string name="profile_review_stars_hint">Tippe, um eine Bewertung zu vergeben (es sind auch halbe Sterne möglich)</string>
    <string name="profile_review_comment_title">Kommentar</string>
    <string name="profile_review_comment_hint">Schreibe einen Kommentar zu deiner Bewertung</string>
    <string name="profile_review_button_review">Eine Bewertung erstellen</string>
    <string name="profile_review_button_show_all">Alle Bewertungen anzeigen</string>
    <string name="profile_review_button_hide_all">Bewertungen ausblenden</string>
    <string name="profile_review_button_submit">Fertig!</string>
    <string name="profile_review">Bewertungen:</string>
    <string name="profile_social_media_links">Social Media Links:</string>
    <string name="profile_genre_single">Genre:</string>
    <string name="profile_genre_multiple">Genres:</string>
    <string name="profile_edit_label">Profil bearbeiten</string>
    <string name="profile_edit_save">Speichern</string>

    <!-- Gigs  -->
    <string name="upcoming_gigs">Kommende Auftritte</string>
    <string name="past_gigs">Vergangene Auftritte</string>
    <string name="gigs_loading">prüfe…</string>
    <string name="gigs_accepted">Gebucht</string>
    <string name="gigs_pending">Ausstehend</string>
    <string name="gigs_canceled">Abgelehnt</string>

    <!-- Events  -->
    <string name="event_participants">Bewerber</string>
    <string name="event_participants_select">Zusagen</string>
    <string name="event_participants_cancel">Absagen</string>
    <string name="event_participants_none">Noch keine Bewerber vorhanden</string>
    <string name="event_gage">Bezahlung in €</string>
    <string name="upcoming_events">Kommende Events</string>
    <string name="past_events">Vergangene Events</string>

    <!-- Add Event -->
    <string name="add_event_title_hint">Name des Events</string>
    <string name="add_event_time_from">Start des Events</string>
    <string name="add_event_time_to">Ende des Events</string>
    <string name="add_event_time_hint">Bitte Zeit auswählen</string>
    <string name="add_event_date_hint">Bitte Datum auswählen</string>
    <string name="add_event_pick_time">Zeit auswählen</string>
    <string name="add_event_pick_date">Datum auswählen</string>
    <string name="add_event_save_button">Event erstellen</string>

    <!-- Error Messages -->
    <string name="error_name">Namensfeld ist leer</string>
    <string name="error_description">Beschreibung ist leer</string>
    <string name="error_start_time">Die Startzeit fehlt</string>
    <string name="error_start_date">Der Startdatum fehlt</string>
    <string name="error_end_time">Die Endzeit fehlt</string>
    <string name="error_end_date">Der Enddatum fehlt</string>
    <string name="error_time_order">Der Endzeitpunkt kann nicht vor dem Startzeitpunkt liegen</string>
    <string name="error_gage_format">Falsches Format bei der Bezahlung</string>
    <string name="error_location">Die Location fehlt</string>

    <string name="missing_favorites">Du hast noch keine Favoriten :(</string>
    <string name="missing_chat">Du hast noch keine Nachrichten erhalten :(</string>

    <!-- Buttons -->
    <string name="button_add_to_favorites">Zu Favoriten hinzufügen</string>
    <string name="button_delete_from_favorites">Aus Favoriten entfernen</string>
    <string name="button_send_message">Nachricht schreiben</string>
    <string name="no_connection">Kein Zugang zum Internet</string>
    <string name="website_dialog_title">Externe Website</string>
    <string name="website_dialog_1">Sind Sie sicher, dass sie die Webseite \"</string>
    <string name="website_dialog_2">\" betreten möchten?</string>
    <string name="website_cancel">Abbrechen</string>
    <string name="website_proceed">Ja</string>
    <string name="registration_genre_picker_title">Bis zu 3 Genres auswählen</string>
    <string name="registration_genre_picker_negative">Beenden</string>
    <string name="registration_genre_picker_positive">Auswählen</string>
    <string name="registration_genre_hint">Genres Auswählen</string>

    <!-- Filter Menu -->
    <string name="filter_expired_events">Vergangene Events</string>
    <string name="filter_fav_events">Nur von Favoriten</string>
    <string name="filter_my_events">Nur meine Events</string>
    <string name="filtern_by_genre">Nach Genre filtern</string>
    <string name="filtern_by_genre_title">Wählen Sie die gewünschten Genres</string>

    <!-- Titles -->
    <string name="explore_title">Explore</string>
    <string name="explore_filter">Filter</string>
    <string name="favorites_title">Favoriten</string>
    <string name="chat_title">Chats</string>
    <string name="chat_hint">Nachricht schreiben</string>
    <string name="profile_host_upcoming_events">Kommende Events:</string>
    <string name="event_alredy_started">Event schon angefangen!</string>

    <!-- Cache -->
    <string name="max_stale_online">900</string> <!-- 60*15 = 15 min -->
    <string name="max_stale_offline">25200</string> <!-- 60*60*7 = 7 tage -->

    <!-- Social Media -->
    <string name="soundcloud">Soundcloud</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="instagram">Instagram</string>
    <string name="spotify">Spotify</string>
    <string name="website">Website</string>

    <!-- Placeholder -->
    <string name="no_upcoming_gigs">Keine kommenden Auftritte</string>
    <string name="no_past_gigs">Keine vergangenen Auftritte</string>

    <string name="no_upcoming_events">Keine kommenden Events</string>
    <string name="no_past_events">Keine vergangenen Events</string>

</resources>
