<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationArtistActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/padding_default">

        <LinearLayout
            android:id="@+id/registration_artist_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_artist_picture"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/registration_artist_image_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_artist_image_hint"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/registration_artist_profilePicture"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="@dimen/element_big"
                android:layout_height="@dimen/element_big"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_default"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24px" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_artist_name"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/registration_artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:ems="10"
                android:hint="@string/registration_artist_name_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_artist_description"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/registration_artist_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:ems="10"
                android:hint="@string/registration_artist_description_hint"
                android:inputType="textMultiLine"
                android:singleLine="false" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_artist_genre"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/registration_artist_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:spinnerMode="dropdown" />

            <!--TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_artist_color"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/registration_artist_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_default"
            android:ems="10"
            android:hint="@string/registration_artist_color_hint"
            android:inputType="textNoSuggestions" /-->

            <Button
                android:id="@+id/button_registration_colorPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:text="@string/registration_artist_color"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_artist_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@color/orange"
                android:text="@string/registration_button"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>