<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/expiredEventsSwitch"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/filter_expired_events"
        android:textSize="18dp" />

    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/grey" />

    <Switch
        android:id="@+id/eventsByFavsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/filter_fav_events"
        android:textSize="18dp" />

    <Switch
        android:id="@+id/eventsByMeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/filter_my_events"
        android:textSize="18dp" />

    <View
        android:id="@+id/separator3"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/filterByGenreTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/filtern_by_genre"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>