<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website_dialog_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/website_dialoge_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="text"
        android:textAlignment="center"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/website_cancel" />

        <Button
            android:id="@+id/proceedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/website_proceed" />

    </LinearLayout>

</LinearLayout>