<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/review_overlay"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:padding="@dimen/padding_default">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overlay"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_default"
        android:text="@string/profile_review_title"
        android:textAlignment="center"
        android:textSize="@dimen/font_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:text="@string/profile_review_stars_title"
            android:textAlignment="center"
            android:textSize="@dimen/font_big"/>

        <RatingBar
            android:id="@+id/rating_bar_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_default"
            android:text="@string/profile_review_stars_hint"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/review_overlay_comment"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/profile_review_comment_hint"
            android:maxLines="6"
            android:text=""
            android:textSize="@dimen/font_bigger" />

    </LinearLayout>

    <Button
        android:id="@+id/review_overlay_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_default"
        android:background="@drawable/standart_button"
        android:text="@string/profile_review_button_submit"/>

    <ImageView
        android:id="@+id/review_overlay_button_close"
        android:layout_width="@dimen/element_smaller"
        android:layout_height="@dimen/element_smaller"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/padding_default"
        android:tint="@color/grey"
        android:clickable="true"
        android:src="@drawable/ic_iconmonstr_close"/>

</RelativeLayout>